# ANT-Library

./: .gitignore  CMakeLists.txt  README.md
cmake/: AntConfig.cmake.in
src/: CMakeLists.txt
src/ANT_LIB/: CMakeLists.txt
src/ANT_LIB/software/USB/device_handles/: usb_device_handle_linux.cpp
src/ANT_LIB/software/serial/: dsi_framer_ant.cpp
src/DEMO_HRM/: demo_hrm.cpp
